# rules_ml_toolchain

./: .bazelrc  .bazelrc-non-hermetic  .gitignore  HOW-TO-FIX.md  MODULE.bazel  README.md  TODO.md  WORKSPACE  WORKSPACE.bazel
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.bazelrc  cpu_linux_aarch64_linux_aarch64_max_llvm_tests.yaml  cpu_linux_aarch64_linux_aarch64_min_llvm_tests.yaml  cpu_linux_x86_64_linux_aarch64_build.yaml  cpu_linux_x86_64_linux_x86_64_max_llvm_tests.yaml  cpu_linux_x86_64_linux_x86_64_min_llvm_tests.yaml  cuda12_linux_aarch64_linux_aarch64_build.yaml  cuda12_linux_x86_64_linux_x86_64_build.yaml  cuda13_linux_aarch64_linux_aarch64_tests.yaml  cuda13_linux_x86_64_linux_x86_64_build.yaml  oneAPI_linux_x86_64_linux_x86_64_build.yaml  publish.yaml  python_linux_x86_64_tests.yaml  python_windows_x86_tests.yaml  release.yaml  release_prep.sh  rocm_linux_x86_64_linux_x86_64_build.yaml  sanitizers_linux_x86_64_linux_x86_64_max_llvm_tests.yaml  sanitizers_linux_x86_64_linux_x86_64_min_llvm_tests.yaml
cc/: BUILD  constants.bzl  cuda.bzl
cc/config/: BUILD.bazel  constants.bzl  create-linux-aarch64-sysroot.sh  create-linux-x86_64-sysroot.sh  cuda.BUILD  llvm18_darwin_aarch64.BUILD  llvm18_linux_aarch64.BUILD  llvm18_linux_x86_64.BUILD  llvm19_linux_x86_64.BUILD  llvm20_darwin_aarch64.BUILD  llvm20_linux_aarch64.BUILD  llvm20_linux_x86_64.BUILD  llvm21_linux_aarch64.BUILD  llvm21_linux_x86_64.BUILD  llvm22_linux_aarch64.BUILD  llvm22_linux_x86_64.BUILD  sysroot_darwin_aarch64.BUILD  sysroot_ubuntu18_aarch64.BUILD  sysroot_ubuntu20_aarch64_gcc10.BUILD  sysroot_ubuntu20_x86_64.BUILD  sysroot_ubuntu20_x86_64_gcc10.BUILD  sysroot_ubuntu22_x86_64_gcc12.BUILD
cc/config/aarch64_ubuntu18_gcc8.4/: Dockerfile  create-sysroot.sh  sysroot.BUILD
cc/config/aarch64_ubuntu20_gcc10/: Dockerfile  sysroot.BUILD
cc/config/sysroot-dockerfiles/: sysroot_ubuntu18_x86_64.Dockerfile  sysroot_ubuntu22-x86_64.Dockerfile
cc/config/x86_64_ubuntu18_gcc8.4/: Dockerfile  sysroot.BUILD
cc/config/x86_64_ubuntu20_gcc10/: Dockerfile  sysroot.BUILD
cc/config/x86_64_ubuntu22_gcc12/: Dockerfile  sysroot.BUILD
cc/config/x86_64_ubuntu24_gcc14/: sysroot.BUILD
cc/cuda/: tools.bzl
cc/cuda/clang/: clang_cuda_runtime_wrapper.h
cc/cuda/features/: BUILD  cuda_nvcc_feature.bzl
cc/cuda/wrappers/: BUILD
cc/features/: BUILD  runtime_library_search_directories.bzl
cc/impls/cpu/: BUILD
cc/impls/cuda/: BUILD
cc/impls/darwin_aarch64_darwin_aarch64/: BUILD
cc/impls/linux_aarch64_linux_aarch64/: BUILD
cc/impls/linux_aarch64_linux_aarch64_cuda/: BUILD
cc/impls/linux_x86_64_darwin_aarch64/: BUILD
cc/impls/linux_x86_64_linux_aarch64/: BUILD
cc/impls/linux_x86_64_linux_x86_64/: BUILD
cc/llvm/: llvm_darwin.BUILD.tpl  llvm_linux.BUILD.tpl
cc/llvms/: BUILD  llvm.bzl  llvm_darwin.BUILD.tpl  llvm_linux.BUILD.tpl
cc/rocm/features/: BUILD
cc/sanitizers/: BUILD  features.bzl  sanitizer_wrapper.bzl  sanitizer_wrapper.sh.tpl
cc/sysroots/: BUILD  collect_cc_libraries.bzl  sysroot.bzl  sysroot_linux.BUILD.tpl
cc_toolchain/: BUILD  BUILD.bazel  README.md
cc_toolchain/config/: BUILD.bazel  cuda.BUILD  llvm19_linux_x86_64.BUILD  llvm_linux_x86_64.BUILD  llvm_macos_aarch64.BUILD  sysroot_macos_aarch64.BUILD  sysroot_ubuntu18_aarch64.BUILD  sysroot_ubuntu18_x86_64.BUILD  sysroot_ubuntu18_x86_64_gcc9.BUILD  sysroot_ubuntu20_x86_64.BUILD
cc_toolchain/cuda/clang/: BUILD.bazel
cc_toolchain/cuda/features/: BUILD.bazel  cuda_nvcc_feature.bzl
cc_toolchain/features/: BUILD.bazel
cc_toolchain/sysroots/macos_arm64/: README.md
cc_toolchain/tests/cpu/: BUILD.bazel  absl.cc  echo.cc  echoclient.cc  protobuf.cc  protobuf_hello.proto  protobuf_test.cc  protoclient.cc  protoclient_tool.py  protoclient_tool_test.py  protogen.cc  protogen_tool.py
cc_toolchain/tests/gpu/: README.md  vector_cuda.cu.cc  vector_cuda.cu.h  vector_cuda_binary.cc  vector_cuda_test.cc
cc_toolchain/wrappers/: BUILD
common/: BUILD  README.md  mirrored_http_archive.bzl  tar_extraction_utils.bzl
extensions/: hipcc_configure.bzl  local_clang_configure.bzl  nvshmem_json.bzl  nvshmem_redist.bzl  rocm_hermetic_download.bzl
gpu/: README.md
gpu/cuda/: BUILD.tpl  build_defs.bzl.tpl  cuda_configure.bzl  cuda_json_init_repository.bzl  cuda_redist_init_repositories.bzl  cuda_redist_versions.bzl  enable_cuda_flag.bzl
gpu/nccl/: build_defs.bzl.tpl  cuda_nccl.BUILD.tpl  nccl_configure.bzl  nccl_redist_init_repository.bzl
gpu/nvshmem/: nvidia_nvshmem.BUILD.tpl  nvshmem_json_init_repository.bzl  nvshmem_redist_init_repository.bzl
gpu/rocm/: BUILD.tpl  build_defs.bzl.tpl  hipcc_configure.bzl  rocm_dist.BUILD.tpl  rocm_hermetic_download.bzl
gpu/sycl/: BUILD  BUILD.bazel  build_defs.bzl.tpl  dist_repo.bzl  find_sycl_config.py  level_zero.BUILD  level_zero.NONHERMETIC.BUILD  oneapi.BUILD  oneapi.BUILD.tpl  oneapi.NONHERMETIC.BUILD  oneapi_feature.bzl  oneapi_repo.bzl  sycl.BUILD  sycl.NONHERMETIC.BUILD.tpl  sycl_configure.bzl  sycl_init_repository.bzl  sycl_mode.bzl  sycl_redist_versions.bzl  zero_loader.BUILD  zero_loader.NONHERMETIC.BUILD
gpu/tests/: BUILD.bazel
py/: BUILD.tpl  python_configure.bzl  python_init_pip.bzl  python_init_rules.bzl  python_register_toolchain.bzl  python_repo.bzl
py/rules_pywrap/: BUILD.bazel  pywrap.impl.bzl
py/tests/pybind/: BUILD.bazel  common_library_test.cc  fifth_library.cc  fifth_library.h  first_library.cc  first_library.h  fourth_library.cc  py_common_library_test.cc  pybind.cc  pybind_copy.cc  pybind_py_test.py  pybind_with_starlark_only.cc  pybind_with_starlark_only_py_test.py  pybind_wrapped_py_test.py  regular.cc  regular.h  regular_copy.cc  regular_copy.h  regular_test.cc  second_library.cc  second_library.h  sixth_library.cc  sixth_library.h  third_library.cc  third_library.h
py/tests/pybind/sub_pybind/: BUILD.bazel  nested_pybind.cc  relative_import_lib.py  relative_wrapped_import_lib.py
py/tests/pybind_external/: BUILD.bazel  pybind_external_py_test.py  pywrap_external_aggregated_binaries_test.py
py/tests/pywrap_external/: BUILD.bazel
(+78 files in other folders)
