# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//third_party/rules_cc_toolchain/features:features.bzl", "cc_toolchain_import_feature")

package(
    default_visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_hermetic_cc",
    build_setting_default = True,
)

config_setting(
    name = "is_hermetic_cc_enabled",
    flag_values = {
        ":enable_hermetic_cc": "True",
    },
)

constraint_setting(
    name = "cuda",
    default_constraint_value = "cuda_disabled",
)

constraint_value(
    name = "cuda_enabled",
    constraint_setting = ":cuda",
)

constraint_value(
    name = "cuda_disabled",
    constraint_setting = ":cuda",
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":cuda_disabled",
    ],
)

platform(
    name = "linux_x86_64_cuda",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":cuda_enabled",
    ],
)

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "macos_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

# This is a placeholder to signify an empty dependency.
cc_toolchain_import_feature(
    name = "empty",
)
