# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files([
    "pybind_extension.py.tpl",
    "wrapped_py_init.cc",
])

bzl_library(
    name = "pywrap_bzl",
    srcs = [
        "pywrap.default.bzl",
        "pywrap.impl.bzl",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "def_file_filter_tool",
    srcs = [":def_file_filter_tool.py"],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "wrap_py_init",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "config_wrap_py_init",
    flag_values = {
        ":wrap_py_init": "True",
    },
    visibility = ["//visibility:public"],
)
